--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   provider: ^5.0.0
   http: ^0.13.5
   encrypt: ^5.0.1
+  rsa_pkcs: ^2.0.1
+  pointycastle: ^3.7.2
 
 dev_dependencies:
   flutter_test:
