--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -22,11 +22,11 @@ linter:
   # `// ignore_for_file: name_of_lint` syntax on the line or in the file
   # producing the lint.
   rules:
-    prefer_const_constructors: false
-    prefer_final_fields: false
+    prefer_const_constructors: true
+    prefer_final_fields: true
     use_key_in_widget_constructors: false
-    prefer_const_literals_to_create_immutables: false
-    prefer_const_constructors_in_immutables: false
+    prefer_const_literals_to_create_immutables: true
+    prefer_const_constructors_in_immutables: true
     avoid_print: false
   #rules:
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
