--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   provider: ^5.0.0
   http: ^0.13.5
   basic_utils: ^5.5.3
+  path_provider: ^2.0.14
 
 dev_dependencies:
   flutter_test:
