--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   http: ^0.13.5
   basic_utils: ^5.5.3
   path_provider: ^2.0.14
+  mutex: ^3.0.1
 
 dev_dependencies:
   flutter_test:
